@@ -925,14 +925,6 @@
     <last>von Gagern</last>
   </name>
   <name>
-    <first>Mathieu</first>
-    <last>Champlon</last>
-  </name>
-  <name>
-    <first>Mathieu</first>
-    <last>Peltier</last>
-  </name>
-  <name>
     <first>Matt</first>
     <last>Albrecht</last>
   </name>
@@ -959,6 +951,22 @@
   <name>
     <first>Matt</first>
     <last>Small</last>
+  </name>
+  <name>
+    <first>Matt</first>
+    <last>Wildig</last>
+  </name>
+  <name>
+    <first>Mathieu</first>
+    <last>Champlon</last>
+  </name>
+  <name>
+    <first>Mathieu</first>
+    <last>Peltier</last>
+  </name>
+  <name>
+    <first>Matthias</first>
+    <last>Bhend</last>
   </name>
   <name>
     <first>Matthew</first>
