@@ -362,7 +362,7 @@ public abstract class SOS extends Task implements SOSCmd {
             // make sure localDir exists, create it if it doesn't
             File dir = getProject().resolveFile(localPath);
             if (!dir.exists()) {
-                boolean done = dir.mkdirs();
+                boolean done = dir.mkdirs() || dir.isDirectory();
                 if (!done) {
                     String msg = "Directory " + localPath + " creation was not "
                         + "successful for an unknown reason";
